# takeoff-launcher

./: Downloads.md  ProjectHome.md
Takeoff/: CHANGELOG  CMakeLists.txt  COPYRIGHT  HACKING  README  _install.sh  _run.sh  _uninstall.sh  messages.sh  run.sh  takeoff.pro
Takeoff/documentation/: doxyfile
Takeoff/installation/: plasma-applet-takeoff.desktop
Takeoff/src/takeoff/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  takeoff.pri
Takeoff/src/takeoff/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigForm.cpp  ConfigForm.h  ConfigForm.ui  takeoff.config.pri
Takeoff/src/takeoff/model/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigForm.cpp  ConfigForm.h  ConfigForm.ui
Takeoff/src/takeoff/model/favorites/: CMakeLists.txt  Favorites.cpp  Favorites.h  takeoff.model.favorites.pri
Takeoff/src/takeoff/model/krunner/: CMakeLists.txt  KRunner.cpp  KRunner.h
Takeoff/src/takeoff/model/menu/: CMakeLists.txt  Menu.cpp  Menu.h
Takeoff/src/takeoff/model/menu/qtxdg/: CMakeLists.txt  xdgdesktopfile.cpp
Takeoff/src/takeoff/model/qtxdg/: CMakeLists.txt  takeoff.model.qtxdg.pri  xdgdesktopfile.cpp
Takeoff/src/takeoff/takeoff_widget/: CMakeLists.txt  Launcher.cpp  Launcher.h  TakeoffWidget.cpp  TakeoffWidget.h  takeoff.takeoff_widget.pri
Takeoff/src/takeoff/takeoff_widget/menu/: CMakeLists.txt  MenuWidget.cpp  MenuWidget.h  Panel.cpp  Panel.h  PanelArea.cpp  PanelArea.h
Takeoff/src/takeoff/takeoff_widget/parts/: CMakeLists.txt  Panel.cpp  Panel.h  PanelArea.cpp  PanelArea.h  takeoff.takeoff_widget.parts.pri
Takeoff/src/takeoff/takeoff_widget/search/: CMakeLists.txt  SearchWidget.cpp  SearchWidget.h
Takeoff/src/takeoff/takeoff_widget/util/: CMakeLists.txt  Panel.cpp  Panel.h
Takeoff/src/takeoff/view/config_forms/: CMakeLists.txt  GeneralSettingsForm.cpp  GeneralSettingsForm.h  GeneralSettingsForm.ui  KRunnerForm.cpp  KRunnerForm.h
Takeoff/src/takeoff/view/takeoff_widget/: CMakeLists.txt  Launcher.cpp  Launcher.h  TakeoffWidget.cpp  TakeoffWidget.h
Takeoff/src/takeoff/view/takeoff_widget/menu/: CMakeLists.txt  MenuWidget.cpp  MenuWidget.h  PanelArea.cpp  PanelArea.h
Takeoff/src/takeoff/view/takeoff_widget/search/: CMakeLists.txt  SearchWidget.cpp  SearchWidget.h
Takeoff/src/takeoff/view/takeoff_widget/util/: CMakeLists.txt  Panel.cpp  Panel.h
Takeoff/translations/: CMakeLists.txt  UpdateTranslations.sh  ca.po  de.po  el.po  es.po  gl.po  it.po  pl.po  plasma_applet_takeoff.pot  ru.po  takeoff.pot  takeoff_en.ts  takeoff_es_ES.qm  takeoff_es_ES.ts  tr.po
wiki/: Downloads.wiki
